fixed the dark mode for the log in

--- a/css/login.css
+++ b/css/login.css
@@ -1,13 +1,14 @@
-/* Base light theme (default) */
-body, html {
-  margin: 0;
-  padding: 0;
-  font-family: Arial, sans-serif;
-  background: linear-gradient(to bottom, #d7eefe, #f5f5f5);
-  color: #000000;
+html{
   height: 100%;
-  transition: all 0.3s ease;
 }
+
+body {
+    transition: background-color 0.5s ease;
+    background-color: #e6f3fc;
+    color: #000;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+  }
 
 .login-container {
   margin: 150px auto 0 auto;
